SquadScreen: changed unit upgrading